golden/error/unescape_ujson_not_hex.test
"Invalid: \u0nothex"

# output:
 --> stdin:1:12
  |
1 | "Invalid: \u0nothex"
  |             ^~~~
Error: Expected four hex digits after '\u' escape sequence.
